--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-SERVER_PORT=:5000
-DB_CONNECTION_STRING=localhost:27017
+PORT=:5000
+MONGODB_URI=mongodb://localhost:27017
 DB_NAME=auth-task
 TEST_DB_NAME=auth-task-test
 SECRET=your secret key
